Changes to be committed: 	modified:   requirements.txt 	modified:   static/css/style.css 	modified:   static/js/script.js 	modified:   templates/index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,18 +7,23 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 <body>
+    <h1>The Planets</h1>
     <div id="sidebar">
+        <button id="closeButton">&times;</button>
         <h2 id="planetName"></h2>
         <p id="planetInfo"></p>
-        <img id="planetGif" src="" alt="Planet GIF" style="width: 100%; margin-top: 20px;" />
-        <table id="planetDetails" style="width: 100%; margin-top: 20px;">
-            <!-- This table will be populated dynamically with JavaScript -->
+        <img id="planetGif" src="" alt="Planet Gif" style="width:100%; height:auto;" />
+        <table id="planetDetails">
+            <tr>
+                <th>Characteristic</th>
+                <th>Value</th>
+            </tr>
+            <!-- The data for the selected planet will be inserted here -->
         </table>
-    </div>     
-    <h1>SOLAR SYSTEM</h1>
-    
-    <!-- Include Three.js and OrbitControls from Flask's static files -->
+    </div>
+    <!-- Include Three.js and OrbitControls from CDN -->
     <script src="{{ url_for('static', filename='js/three.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/GLTFLoader.js') }}"></script>
     <script src="{{ url_for('static', filename='js/OrbitControls.js') }}"></script>
     <script src="{{ url_for('static', filename='js/script.js') }}"></script>
 </body>
