modified:   static/css/style.css 	modified:   templates/index.html

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -31,7 +31,7 @@ h1 {
     font-family: 'Nasa'; 
     position: absolute;
     top: 20px;
-    left: 20px;
+    right: 20px;
     color: white;
 }
 
