--- a/templates/index.html
+++ b/templates/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Planets</title>
+    <title>SOLAR SYSTEM</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 <body>
-    <h1>The Planets</h1>
+    <h1>SOLAR SYSTEM</h1>
     <div id="sidebar">
         <button id="closeButton">&times;</button>
         <h2 id="planetName"></h2>
